# quax

./: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: ci.yml
api/: .dockerignore  .env.example  .gitignore  Caddyfile  Cargo.toml  Dockerfile  Dockerfile.migrate  README.md  docker-compose.yml  migrate.sh
api/migrations/: 001_create_users_table.sql  001_extensions.down.sql  001_extensions.up.sql  001_init.down.sql  001_init.up.sql  002_reset_all_tables.down.sql  002_users.down.sql  002_users.up.sql  003_auth_methods.down.sql  003_auth_methods.up.sql  003_create_api_keys_table.sql  004_reset_all_tables.up.sql  004_sessions.down.sql  004_sessions.up.sql  005_api_keys.down.sql  005_api_keys.up.sql
api/scripts/: migrate-reset-hard.sh  migrate-reset.sh  reset-admin.sh  seed.sh
api/src/: bootstrap.rs  lib.rs  main.rs  routes.rs  state.rs
api/src/feature/: mod.rs
api/src/feature/admin/: api_key_handler.rs  api_key_model.rs  api_key_repository.rs  api_key_routes.rs  api_key_service.rs  handler.rs  mod.rs  routes.rs
api/src/feature/admin/api_key/: dto.rs  entity.rs  handler.rs  mod.rs  repository.rs  routes.rs  service.rs
api/src/feature/admin/log/: dto.rs  handler.rs  mod.rs
api/src/feature/admin/stats/: dto.rs  handler.rs  mod.rs  repository.rs  service.rs
api/src/feature/admin/user/: dto.rs  handler.rs  mod.rs  repository.rs
api/src/feature/auth/: claims.rs  dto.rs  handlers.rs  jwt.rs  mod.rs  model.rs  repository.rs  routes.rs  service.rs  types.rs
api/src/feature/auth/auth_method/: entity.rs  mod.rs  repository.rs  service.rs
api/src/feature/auth/handlers/: core.rs  mod.rs  password.rs  session.rs
api/src/feature/auth/session/: entity.rs  mod.rs  repository.rs  service.rs
api/src/feature/auth/types/: claims.rs  dto.rs  mod.rs
api/src/feature/auth/utils/: cookie.rs  jwt.rs  mod.rs
api/src/feature/dev/: handlers.rs  mod.rs  routes.rs
api/src/feature/health/: handler.rs  mod.rs  routes.rs
api/src/feature/user/: avatar.rs  dto.rs  entity.rs  handler.rs  mod.rs  model.rs  repository.rs  routes.rs
api/src/infrastructure/: config.rs  env.rs  mod.rs  server.rs
api/src/infrastructure/persistence/: mod.rs  redis.rs  redis_trait.rs
api/src/infrastructure/storage/: local.rs  mod.rs  provider.rs
api/src/infrastructure/web/: cors.rs
api/src/infrastructure/web/middleware/: api_key.rs  auth.rs  mod.rs  rate_limit.rs
api/src/infrastructure/web/response/: codes.rs  mod.rs  success.rs
api/tests/: auth_blacklist_test.rs  auth_flow.rs  redis_test.rs
api/tests/common/: mod.rs
migrations/: 001_create_users_table.sql
src/: lib.rs  main.rs  routes.rs  state.rs
src/feature/: mod.rs
src/feature/admin/: handler.rs  mod.rs  routes.rs
src/feature/auth/: cookie.rs  handlers.rs  mod.rs  repository.rs  routes.rs  service.rs  types.rs
src/feature/user/: handler.rs  mod.rs  model.rs  repository.rs  routes.rs
src/infrastructure/: config.rs  logging.rs  mod.rs
src/infrastructure/persistence/: database.rs
src/infrastructure/web/: cors.rs  mod.rs
tests/: auth_flow.rs
ui/: .env.example  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package.json  vercel.json  vite.config.ts
ui/plugins/: env-validator.ts
ui/src/: index.css  main.tsx  routeTree.gen.ts
ui/src/constants/: config.ts  (+1 more)
(+148 files in other folders)
