[package]
name = "quax"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["cookie"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
dashmap = "6"

# Async
async-trait = "0.1"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "signal", "time"] }

# Error handling
color-eyre = "0.6.5"
dotenvy = "0.15.7"
eyre = "0.6.12"
thiserror = "1.0"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Validation
validator = { version = "0.20", features = ["derive"] }

# Logging
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["serde", "env-filter"] }

# Database
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid", "migrate"] }
uuid = { version = "1.11", features = ["v4", "serde"] }

# Cookie
time = "0.3"
constant_time_eq = "0.3"

# Crypto
md5 = "0.7"
rand = "0.8"

# Auth
jsonwebtoken = "9"
argon2 = "0.5"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }

[profile.release]
opt-level = 3
lto = true
strip = true
panic = "abort"
codegen-units = 1

[profile.release-debug]
inherits = "release"
strip = false
debug = true
